Fixed Header alignment

--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ body {
   line-height: 1.5;
   box-sizing: border-box;
   margin: 0;
-  overflow-x: hidden;
+    overflow-x: hidden;
   display: flex;
   flex-direction: column;
   min-height: 100vh;
@@ -35,9 +35,10 @@ header .container-fluid {
   margin: 0;
   left: 0;
   position: relative;
+  display: inline-block;
 }
 .container-fluid .navbar-expand-lg .navbar-nav .nav-link {
-  padding-right: 3.5rem;
+  padding-right: 1.5rem;
   padding-left: 1.5rem;
 }
 .navbar-expand-lg .navbar-nav .nav-item .nav-link:hover {
@@ -46,6 +47,7 @@ header .container-fluid {
 .navbar-expand-lg .navbar-nav .nav-link:hover {
   color: white;
 }
+
 
 /*MAIN*/
 .rounded .mx-auto .d-md-block .img {
